# shush-cpu

./: .gitmodules  CMakeLists.txt  README.md
inc/: commands.inc
include/: shush-cpu.hpp
src/: shush-cpu.cpp
test/: factorial.shushexe
